<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShopWell</string>
    <string name="hello_world">Hello world!</string>

    <!-- Home Page Resources -->
    <string name="products_btn">Products</string>
    <string name="add_customer_btn">Add Customer</string>
    <string name="list_customers_btn">List Customer</string>

    <!-- Add Customer Resources -->
    <string name="title_activity_add_customer">Registration</string>
    <string name="heading_add_customer">Registration for Customers</string>
    <string name="label_firstname">First Name</string>
    <string name="label_lastname">Last Name</string>
    <string name="hint_firstname">Enter First Name</string>
    <string name="hint_lastname">Enter Last Name</string>
    <string name="register_customer_btn">Register</string>
    <string name="title_activity_select_customer">Select Customer</string>
    <string name="label_select_cust_heading">Select Customer</string>

</resources>
