<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <Button
        android:id="@+id/btnProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/products_btn" />

    <Button
        android:id="@+id/btnAddCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_customer_btn" />

    <Button
        android:id="@+id/btnListCustomers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_customers_btn" />

</LinearLayout>
